--- a/site/Kursovaya/style.css
+++ b/site/Kursovaya/style.css
@@ -1,6 +1,7 @@
  body {
      margin: 0;
-     font-family: 'Source Sans Pro', Arial, sans-serif;
+     font-family: 'Source Sans Pro';
+     letter-spacing: 0.025em;
  }
 
  * {
@@ -11,26 +12,36 @@
      background-color: black;
      color: white;
      background-image: url("images/banner.jpg");
-     padding: 170px 130px;
-     width: 1439px;
+     
+     width: 100%;
      height: 560px;
-     opacity: 0.7;
+     background-repeat: no-repeat;
+     background-size: cover;
 
  }
 
  .first h1 {
 
-     z-index: 2;
-     border-bottom: 1px solid;
+     border-bottom: 2px solid;
      padding-bottom: 20px;
      font-size: 55px;
+     font-weight: 600;
+     line-height: 1.65;
+     
  }
 
-p {
+ p {
+     font-weight: 600;
+     letter-spacing: 0.25em;
+     font-size: 13px;
+     text-transform: uppercase;
+     letter-spacing: 3.26px;
+     line-height: 21.56px;
+ }
+h2 {
+    font-size: 30px;
     font-weight: 600;
-    letter-spacing: 0.25em;
-    font-size: 12px;
-    text-transform: uppercase;
+    letter-spacing: 0.466px;
 }
 
  .image-block {
@@ -49,12 +60,17 @@ p {
 
  .button {
      color: white;
-     border: 1px solid;
-     padding: 15px 45px;
+     border: 2px solid;
+     padding: 16px 40px;
      text-decoration: none;
      text-transform: uppercase;
-     transform: translateX(100px); <!--???-->
+     transform: translateX(100px);
+     position: relative;
+     bottom: 12px;
+     font-size: 16px;
+      margin: 0px 80px;
  }
+
 
  .clearfix {
      clear: both;
@@ -119,7 +135,8 @@ p {
  .fade1:hover {
      background: rgba(0, 0, 0, 0.0);
  }
-.fade2 {
+
+ .fade2 {
      padding: 150px 70px;
      height: 100%;
      background: rgba(140, 127, 183, 0.81);
@@ -129,7 +146,8 @@ p {
  .fade2:hover {
      background: rgba(0, 0, 0, 0.0);
  }
-.fade3 {
+
+ .fade3 {
      padding: 150px 70px;
      height: 100%;
      background: rgba(220, 120, 113, 0.81);
@@ -139,7 +157,8 @@ p {
  .fade3:hover {
      background: rgba(0, 0, 0, 0.0);
  }
-.fade4 {
+
+ .fade4 {
      padding: 150px 70px;
      height: 100%;
      background: rgba(218, 171, 127, 0.81);
@@ -149,7 +168,8 @@ p {
  .fade4:hover {
      background: rgba(0, 0, 0, 0.0);
  }
-.fade5 {
+
+ .fade5 {
      padding: 150px 70px;
      height: 100%;
      background: rgba(121, 153, 216, 0.81);
@@ -159,7 +179,8 @@ p {
  .fade5:hover {
      background: rgba(0, 0, 0, 0.0);
  }
-.fade6 {
+
+ .fade6 {
      padding: 150px 70px;
      height: 100%;
      background: rgba(122, 204, 179, 0.81);
@@ -170,3 +191,12 @@ p {
      background: rgba(0, 0, 0, 0.0);
  }
 
+ .darkfade {
+     height: 100%;
+     background: rgba(36, 46, 76, 0.81);
+     padding: 100px 115px;
+    
+ }
+.button:hover {
+    color: aqua;
+}
